--- a/.github/workflows/jekyll-deploy.yml
+++ b/.github/workflows/jekyll-deploy.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Setup Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: '3.x' # Use a recent stable Ruby version (e.g., 3.2, 3.3)
+          ruby-version: '3.2' 
           bundler-cache: true # Caches bundle dependencies for faster builds
 
       - name: Build Jekyll Site
