--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@ Gemfile.lock
 
 # Ignore files created by npm
 node_modules
-package-lock.json
+# package-lock.json
 
 # Ignore the vendor file at root level and bundle for alternative installation
 /vendor/
